# topAlbums

./: .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
migrations/: env.py
migrations/versions/: b3b5861c5f20_add_fiel_playing_on_albums.py  b5076c6f9916_create_albums_table.py  f0ab2aeba0d8_alter_table_albums.py
templates/: base.html  index.html
templates/album/: list.html  playing.html  search.html
tests/: conftest.py  factories.py  test_album.py  test_app.py  test_filter_service.py
top_albums/: app.py
top_albums/databases/: database.py
top_albums/models/: album.py
top_albums/routers/: album.py
top_albums/schemas/: album.py
top_albums/services/: filter_service.py
